edits added to intro, chap1, chap2

--- a/chap1.tex
+++ b/chap1.tex
@@ -1,5 +1,5 @@
 \chapter{Narratives and Counternarratives}
-\label{chap:2}
+\label{chap:1}
 
 %% was sources \& ideologies
 %% 2. Where is that coming from?
@@ -44,6 +44,9 @@
 %%5) not a good conclusion to the chapter so far; should have a sense
 %%we have gotten somewhere and learned something
 
+%%=====================================
+%%Personal exceptionalism: ``we think we're good drivers''
+
 
 The popular narratives about self-driving vehicles have not appeared
 out of nowhere. But what are their roots? What are the sources from which
@@ -74,7 +77,7 @@ Technologies, with rare exceptions,\footnote{One could argue that
   vulcanized rubber, for example, as an accidental discovery does not
   fit this pattern.} are imagined before they are made, through design
 fictions and/or science fiction. These future
-visions serve a number of purposes: they inspire scientists and
+visions serve a number of purposes: for example, they inspire scientists and
 engineers,\footnote{In fact I think it would be exceedingly rare to
   find an engineer who was not influenced by science fiction. My
   interest in AI has been driven by \emph{Star Trek} and \emph{2001: A
@@ -83,10 +86,10 @@ engineers,\footnote{In fact I think it would be exceedingly rare to
   \emph{The Diamond Age} as key to shaping his interest in
   computational linguistics and human-machine interfaces.} they serve as design
 studies for the possible shapes of technology, and they act as
-playgrounds to investigate the cultural impacts of technologies, among
-others. Though created in different contexts, with potentially
+playgrounds to investigate the cultural impacts of technologies.
+Though created in different contexts, with potentially 
 different levels of scholarly care, these two types of fiction are not
-neatly delineated, and are unified in as sources of insight into what
+neatly delineated, and are unified as sources of insight into what
 might be possible with technology. ``Design fiction is the cousin of
 science fiction,'' as Julian Bleecker puts it, and represents a hybrid
 practice that attempts to negotiate between facts and wild, playful
@@ -99,12 +102,13 @@ technical knowledge related to the technologies they are responsible for
 helping bring to life on screen. These depictions become what David
 Kirby calls ``diegetic prototypes'' which are used to ``demonstrate to
 large public audiences a technology's need, benevolence and
-viability.''\cite[p. 43]{kirbyFuture} Kirby connects prototypes---in
-Suchman's terms ``performative artefacts''\cite[p. 45]{kirbyFuture}---a primary
-``driver of technological innovation,'' to these diegetic prototypes,
+viability.''\cite[p. 43]{kirbyFuture} Kirby connects prototypes (primary
+``driver[s] of technological innovation''; in
+Suchman's terms ``performative artefacts'' \cite[p. 45]{kirbyFuture})
+to these diegetic prototypes, 
 by recognizing both their similar rhetorical roles as well as the
 ability of diegetic prototypes to mobilize funding for real-life
-prototypes\cite[p. 44-47]{kirbyFuture} Science fiction, then, has deep
+prototypes \cite[p. 44-47]{kirbyFuture} Science fiction, then, has deep
 and compelling relationships with real engineers and engineering via
 its depiction of aspirational (or cautionary) futures.
 
@@ -131,7 +135,7 @@ consultation with Harald Belker, an automotive designer responsible
 for both numerous Hollywood collaborations as well as real-world
 products.\cite{melansonMinority} But popularly referenced fictions are
 not all so contemporary. \emph{The Jetsons}, though
-the show did not actually foreground driverless vehicles, also get
+the show did not actually foreground driverless vehicles, also gets
 recalled as a source of inspiration due to the role of flying cars,
 which trigger similar visions of wild 
 futures made possible through technology.\cite{JetsonsAge} 
@@ -153,14 +157,14 @@ by linking it to a deep history of research and effort. Connecting it
 instead to the dreams and aspirations of Hollywood cinema makes it
 more novel, exciting, even magical; and the few references to past
 technology projects are relegated to their symbolic value only, used
-to express a sense of impatience and technological inevitability: ``isn't
+to express a sense of impatience and technological inevitability: ``Isn't
 it about time?'' This hype-mindset fits the business
 goals of many news outlets interested primarily in page-views.
 
 The few historically-specific 
 dreams\footnote{Rarely mentioned are other contemporary research
   initiatives such as the work of Vladimir Zworykin at RCA. His
-  concept, inspired by “railroad block signals,” used circuits
+  concept, inspired by ``railroad block signals,'' used circuits
   embedded in the road to magnetically sense vehicle speed and
   location, nearly the opposite of GM's plan in terms of where sensing
 and control occurs.\cite[p. 9]{wetmore} Zworykin's centralized planning model would send
@@ -180,7 +184,7 @@ Futurama exhibit: the line for the exhibit routinely stretched to two
 miles in length, and 28,000 people visited the exhibit each day. The
 Futurama exhibit presented an idea of what the world would look like
 in 1960.\cite[p. 371]{nyeElectrifying} The focal point of the Futurama
-exhibit was a bird-eye view of a future city with multi-lane elevated
+exhibit was a bird's-eye view of a future city with multi-lane elevated
 expressways filled with largely automated vehicles. GM's Firebird III,
 from the 1950s, is also occasionally remembered due to its publicity campaign and
 subsequent cultural presence,\cite{walshVs} despite that the vehicle actually
@@ -204,11 +208,12 @@ advertised, but their media picture is still tightly controlled. Not subsumed
 to the mundane, the quotidian,\footnote{Certain articles from people
   who have actually gone for a ride in these vehicles stress the
   boredom and mundanity that comes with operating this
-  technology.\cite{rode500} But this does not represent the
+  technology.\cite{rode500} But these do not represent the
   preponderance of coverage. It also should be noted that boredom
   always comes with the potential of its opposite. Operating automated
-systems can involve, as Sheridan describes, ``hours or boredom
-punctuated by moments of terror.''\cite[p. 339]{sheridan}} they still possess that magic that
+systems can involve, as Sheridan describes, ``hours of boredom
+punctuated by moments of terror'' \cite[p. 339]{sheridan}.} they still
+possess that magic that 
 makes science fiction connections obvious and compelling. But this
 does not mean such connections are unproblematic. Far from it. By
 their alignment of these vehicles to science fiction, popular
@@ -277,7 +282,7 @@ other and with infrastructure to double the capacity of the
 roadway.\footnote{Speaking at The Road Ahead Conference, hosted by
   the MIT SENSEable City Lab, Cambridge MA, November 21, 2014} Each vehicle would request a slot to pass through the
 intersection, and would be instructed to proceed according to the
-orchestrate of a central control system. This would be the coming-to-fruition of
+orchestrations of a central control system. This would be the coming-to-fruition of
 Vladimir Zworykin's work at RCA from the 1950s. Singapore is engaging in
 controlled vehicle tests to work on just such ideas, to improve car
 sharing with vehicle-to-vehicle communications and predictive traffic
@@ -353,7 +358,7 @@ Transit, model, which is already being deployed in certain
 geographically restricted areas. A PRT researcher I spoke to
 enumerated the benefits to the approach: separate tracks with
 controlled access greatly simplify issues of collision detection and
-negotiation with other vehicles, and reduce risks of collisions if
+negotiation with other vehicles, and reduce risks of injury from collisions if
 they occur. Of course, controlled access requires new infrastructure,
 and seems to call to mind the famous failure of the French Aramis PRT
 project, so comprehensively covered by Latour in \emph{Aramis, or the
@@ -372,7 +377,7 @@ understanding of the history of factory labor and the automation of
 work.
 
 
-\subsection{The Automation of Work and its Untold History}
+\subsection{The Automation of Work and Its Untold History}
 %% 1.1) deep history is the mechanization/automation of work (4 p)
 %% --going back to factories/IRev: replacing human competencies with
 %% machine competencies and moving the people into new roles
@@ -685,7 +690,7 @@ will be, which is currently an open engineering question.
 %%LOSING Thread of argument
 
 The narrative of automation progress was once the province of
-blue-collar labor only, but is now moving into such white-collar work as
+blue-collar labor only, but is now moving into white-collar work as
 well, which partly mobilizes the popular concern about next-generation
 automation technologies that perform more difficult and complex
 informational tasks. Self-driving vehicles make sense today because of
@@ -796,7 +801,7 @@ intelligence tasks often cross-pollinates with self-driving car
 coverage, either through direct reference or indirect association.
 Some appreciation for the history of the field
 of AI is important for understanding these moments as they are being
-used, as models of progress and evidence of the technological inevitability of
+used:  as models of progress and evidence of the technological inevitability of
 self-driving vehicles. And the technologies of the moment, employed in
 cars as well as other AI applications, are critical here. The history
 of AI as conveyed through news coverage about self-driving vehicles is
@@ -813,7 +818,7 @@ or rather semblances of automata, appear in Hellenic Egypt, with
 priests as puppeteers pulling their strings.\cite[Ch. 1]{mccorduck} The history of
 artificial life is intertwined with that of autonomous machines: the
 creation of Pygmalion's Galatea echoes the same practices and
-concerns, as does the story of Mary Shelley's “modern Prometheus” (of
+concerns, as does the story of Mary Shelley's ``modern Prometheus'' (of
 particular note for the purposes of this argument, Shelley's vision of
 artificial life is inspired and physically mobilized by static
 electricity, the infusing of a ``spark of being'' into the creature; and
@@ -825,7 +830,7 @@ spy against the Gentiles.\cite[Ch. 1]{mccorduck} Though Loew's was not the only 
 recorded in myth, the rabbi occupies a special position among the most
 prominent AI researchers of the 20th century: Pamela McCorduck records
 that Marvin Minsky and Joel Moses grew up with a ``family tradition
-that they are descendants of Rabbi Loew,'' and Moses claims a number of
+that they are descendants of Rabbi Loew,'' and Joel Moses claims a number of
 other American scientists, including John von Neumann and Norbert
 Wiener, also consider themselves among the descendants.\cite[Ch. 1]{mccorduck} This is all
 to say that while the technological drivers of conceptual visions are
@@ -836,9 +841,9 @@ research in autonomy and artificial intelligence.
 As Jessica Riskin chronicles in her studies of eighteenth and
 nineteenth century automata, clever inventors, interested in going
 beyond mere representation, created a variety of impressive
-simulations of life---that is simulation in its modern sense, meaning
-experimental models that can elucidate the natural, rather than its
-contemporary sense which would have meant artifice.\cite[p. 605--606]{riskinDuck}
+simulations of life---that is \emph{simulation} in its modern sense, meaning
+``experimental models that can elucidate the natural,'' rather than its
+contemporary sense which would have connoted artifice \cite[p. 605--606]{riskinDuck}.
 Makers of automata strove to imitate the very materials of life,
 hoping to ``make the parts of their machine work as much as possible
 like the parts of living things and thereby to test the limits of
@@ -866,11 +871,13 @@ sensing and acting in the manner of a
  electricity and magnetism published in the 1865 paper ``A Dynamical
  Theory of the Electromagnetic Field'' (among the most important
  equations in physics), published a paper in 1868 on centrifugal
- governors in steam engines in the Proceedings of Royal Society. This
- paper, ``On governors,'' became one of the central papers in early
+ governors in steam engines in the \emph{Proceedings of the Royal Society}. This
+ paper, ``On Governors,'' became one of the central papers in early
  control theory.\cite{ottomayr} Bringing together a number of existing
  areas including control theory,
- cybernetics---from the Greek \emph{cybernetes} meaning
+ cybernetics---from the Greek \emph{cybernetes}\footnote{This is as
+   written in Wiener's contemporary papers. It should perhaps be written
+   as \emph{kybernetes}, κυβερνήτης.} meaning
  ``steersman''\cite[p. 6]{wienerMainIdeas}---extended their reach to more complex
  systems: ``control and communication in the animal and machine''. As
  Norbert Wiener puts it, control, or the
@@ -894,7 +901,7 @@ Integral to the history of AI as a field is that it was fundamentally
 interdisciplinary from the start. Like its forebear cybernetics, it
 brought together researchers from physics, mathematics, biology, and
 early cognitive science. The field began in earnest with the Dartmouth
-Conference in 1956, which brought together many who would continue to
+Conference in 1956, which assembled many who would continue to
 be preeminent researchers over the next decades. Hosted by John
 McCarthy (who originated the name
 ``Artificial Intelligence''), Marvin Minsky, Nathaniel Rochester, and
@@ -909,7 +916,7 @@ and use, ``neuron'' networks,\footnote{Neural networks are one of the
   actually work. A couple of theoretical developments altered them
   from a curiosity to one of the main techniques in modern AI. This
   half-century journey was presaged by the one sentence: ``Partial
-  results have been obtained by the problem needs more theoretical
+  results have been obtained but the problem needs more theoretical
   work''.\cite{dartmouthconf}} self-improving machines, and computational 
 creativity.\cite{dartmouthconf} Early successes spurred romantic
 predictions, and by 1960, human-level intelligence was predicted by
@@ -930,7 +937,7 @@ big investments, and subsequent great public disappointment with the
 coming of another ``AI Winter'' beginning in 1987 and
 1988.\footnote{These are roughly the dates Russell and Norvig give in
   \emph{Artificial Intelligence}\cite{russellnorvig}} But despite the
-warnings of Roger Schank and Marvin Minsky, that overoptimistic
+warnings of Roger Schank and Marvin Minsky that overoptimistic
 expectations for AI would result in another winter like the previous
 one in the 1970s, overall expectations were high, especially within
 the business community, which funded companies and assimilated AI
@@ -943,8 +950,8 @@ processing, and computer vision.\cite[Afterword]{mccorduck} The 1983 US Strategi
 initiative, led by Robert Kahn at DARPA, had AI as its third focus
 area, with ``image understanding'' and interpretation---made possible by
 the digitized image---as long range project goals. In its revised
-10-year plan, the initiative even included an autonomous land vehicle
-alongside a pilot's associate and computerized battle management
+10-year plan, the initiative even included an autonomous land vehicle,
+alongside a pilot's associate, and computerized battle management
 software. The project suffered serious management problems, and
 was eventually canceled, precipitating the general crash in AI
 funding---through which research quietly continued, waiting for another
@@ -969,16 +976,16 @@ can operate without humans?''
 %% Classical symbol approaches (3)
 %%specifically w/ reference to ideologies
 The first important AI paradigm is the classical symbolic system
-approach. Associated with Allen Newell and Herb Simon, the idea of the
+approach. Associated with Allen Newell and Herb Simon, the main idea of the
 physical-symbol system hypothesis is that ``symbols lie at the root of
 intelligent action''\cite[p. 109]{newellsimon}. Therefore not only
 does intelligence require symbolic manipulation, it may indeed be
-coextensive with physical-symbol systems, in other words a
+coextensive with physical-symbol systems; in other words, a
 physical-symbol system has ``necessary and sufficient means'' for
 intelligence and intelligent action.\cite[p. 111]{newellsimon} Such
-objects are \emph{symbol systems} in that they contain symbols and processes
+constructs are \emph{symbol systems} in that they contain symbols and processes
 that act upon symbols. And they are \emph{physical} in that they obey
-physical laws and are realizable, in reality, through engineering.
+physical laws and are realizable through engineering.
 These symbol systems would arrive at answers through a technique known as
 heuristic search: by looking through a tree of possibilities in an
 intelligent way, they arrive at the appropriate answer.\footnote{The key
@@ -989,12 +996,14 @@ by the pruning of the tree: rather than having to apply brute force to
 search the entire space, an intelligent system applying heuristic
 search makes decisions at each node as to which branches are most
 likely to produce a good result and searches those.\cite[p.
-  124]{newellsimon} As Newell and Simon wrote what makes a problem a
+  124]{newellsimon} As Newell and Simon wrote, what makes a problem a
 problem is ``not that a large amount of search is required for its
 solution, but that a large amount \emph{would} be required if a requisite
 level of intelligence were not applied'': the task of intelligence is
 to ``avert the ever-present threat of the explosion of
-search.''\cite[p. 125]{newellsimon} 
+search.''\cite[p. 125]{newellsimon}\footnote{This is somewhat ironic in that
+  modern approaches to AI focus particularly on search, which has
+  often produced results that surpass logic-based approaches.} 
 
 The conceit then, of the physical-symbol system hypothesis is twofold.
 First, it assumes that
@@ -1017,12 +1026,13 @@ convincingly imitate intelligence (and other philosophers of AI, such
 as Margaret Boden, do not take Searle's view on the
 subject).\footnote{Indeed, I find the Chinese room example to be
   lacking in several respects, particularly that it rests on some
-  na\"{\i}ve about what can or cannot be intelligent that seem to beg
+  na\"{\i}ve assumptions about what can or cannot be intelligent that seem to beg
   the question it tries to pose. What is important about the
   argument is that, right or wrong, it challenges the basis of
   computers as intelligent systems.}
 
-The former point proves harder to dodge. While it may be true, as is
+The former point proves harder for symbol-system researchers to dodge.
+While it may be true, as is 
 fundamental to the field of AI and which even Searle holds, that
 machines can think because ``we are precisely such machines,''\cite[p.
 83]{chineseSearle} and therefore it should be possible to create
@@ -1203,14 +1213,14 @@ workings. Another recent slew of articles focuses on
 the ``self-aware'' Mario created by researchers at the University of
 T\"{u}bingen. Any pretense to worry about a ``self-aware AI . . . with
 an insatiable desire for material wealth'' that knows ``how to kill''\cite{vincentMario}
-is simply journalistic excess\footnote{As the
+is simply journalistic excess,\footnote{As the
   researchers well know. This case is just a convenient example of how
-such stories spiral out from the lab and acquire new meanings.}, and suggest
+such stories spiral out from the lab and acquire new meanings.} and suggests
 significantly more care must be taken in the use of such terms. Mario
 is programmed with emotional states like a word-processing program is
 programmed with different modes or display parameters. These states
-are simply caricatures of emotions, and that plus the program's
-natural-language interface makes it appear more eerily science-fictional than it
+are simply caricatures of emotions, and that, plus the program's
+natural-language interface, makes it appear more eerily science-fictional than it
 actually is.
 
 %% ``self-aware'' mario, image recognition and other
@@ -1231,7 +1241,7 @@ car space. Many articles (though some note that current
 state-of-the-art image recognition is still considerably less capable
 than people are) still present the uncritical idea that we have solved
 the image-recognition problem---or rather, that increases in computing
-power mean it will necessarily soon be solved. By this narrative seemingly limitless
+power mean it will necessarily soon be solved. By this narrative, seemingly limitless
 possibilities are open before us. As one should expect, the real
 history is far more nuanced. We would do well to remember that
 progress has been slow, contingent, and heterogeneous, a product of a
@@ -1364,8 +1374,8 @@ in which complex relations of human-requested and
 automatically-provided operating criteria are already visible: both
 the driver and automation may be concurrently monitoring the engine
 RPMs, and the driver may request shifts that reinforce or override the
-preferences of the automation (or, in the case of a shift that would
-over-rev the engine, for example, are rejected). A guide for the
+preferences of the automation (or which, in the case of a shift that would
+over-rev the engine for example, are rejected). A guide for the
 continued automation of automobiles could (and, I would argue, should)
 make an honest attempt to reason about such preexisting examples and
 build from them. But instead, they are ignored, and thus the
@@ -1382,7 +1392,7 @@ mechanical in result and are arbitrarily considered to be
 wish to include 
 the driver as part of the ``vehicle,'' real-world vehicle tasks, or
 control functions, are more complicated than simply turning the
-steering wheel, but the NHTSA's levels of autonomy only compound these
+steering wheel; but the NHTSA's levels of autonomy only compound these
 issues with simplistic distinctions that do not account for the
 majority of ways these systems could be engineered. Level 0, or
 ``no-automation'' represents 
@@ -1401,7 +1411,7 @@ The report is even confused on the number of control functions, though
 it ultimately means that both steering and brakes/throttle cannot be
 automated at the same time in a level 1 system: 
 
-\begin{quote}n
+\begin{quote}
 ``there is no combination of vehicle control systems working in unison
 that enables the driver to be disengaged from physically operating the
 vehicle by having his or her hands off the steering wheel AND feet off
@@ -1471,10 +1481,10 @@ training to ``authorize the operation of self-driving
 vehicles,''\cite[p. 11]{NHTSA} and
 positions the operator as a subject of education and regulation while
 calling upon him or her to be the ultimate decision
-authority:\footnote{They mention “Several State automated vehicle laws
+authority:\footnote{They mention ``Several State automated vehicle laws
 consider the person who activates the automated vehicle system to be
 the 'driver' of the vehicle even if that person is not physically
-present in the vehicle”: their only commentary on this point is to say
+present in the vehicle'': their only commentary on this point is to say
 that they know of no current systems (level 4) capable of this
 operation.\cite[p. 5]{NHTSA}} the
 automated functions should always defer to driver input to the wheel
@@ -1659,16 +1669,18 @@ answered by either of these autonomy formulations, but should be
 addressed by any document that attempts to describe, normalize, or
 regulate automated vehicle operations. In a sense, these autonomy
 formulations pull together the three previous strands of this
-chapter: they are influenced by science and design fictions, and seek
+chapter: (1) they are influenced by science and design fictions, and seek
 to respond to the narratives of technological revolution as
 transmitted through the popular marketing of what nevertheless remain laboratory
-objects; they repeat many of the mistakes of the dominant narrative of
+objects; (2) they repeat many of the mistakes of the dominant narrative of
 automation history, and neglect some of the complexities of
 human-machine labor relationships evidenced by their historical
-antecedents; and they represent models for the
+antecedents; and (3) they represent models for the
 continued development of cutting-edge AI technologies, which perpetuate
 the vision of an unbroken chain of development toward
-ever-more-intelligent artifices. This historical journey has attempted
+ever-more-intelligent artifices. 
+
+This historical journey has attempted
 to shed light on some of the unspoken assumptions behind autonomous
 vehicles, assumptions that shape the popular narrative toward
 particular visions of automation and away from others. Now, however,
