--- a/intro.tex
+++ b/intro.tex
@@ -1,5 +1,5 @@
 \chapter{Introduction: Driverless Dreams}
-\label{chap:1}
+\label{chap:0}
 
 %Intro / Visions / Public Faces (14 p)
 
@@ -27,7 +27,7 @@ it live, on the streets of New York City. But it would be wrong to
 characterize a 90-year engineering journey as the continual
 progression toward a ``modern,'' developed device. There is nothing
 fundamentally natural about the way automated---or, often interchangeably
-``autonomous,'' ``driverless,'' or ``self-driving''\footnote{I indeed use these terms
+``autonomous,n'' ``driverless,'' or ``self-driving''\footnote{I indeed use these terms
   interchangeably at times even within this text, but I should mention
 the specifics of their use here. Autonomous, driverless, and self-driving
 vehicles are generally one and the same, though the terms
@@ -43,8 +43,8 @@ sounds, is at the center of this thesis and is specifically the focus
 of chapter \ref{chap:3}.}---vehicles are being
 envisioned, designed, and talked about. Instead, automated vehicle
 development has sustained several successive, overlapping paradigms,
-in part, though not completely driven by the technical capabilities
-of, and excitement about, contemporary technologies. However, equally
+in part, though not completely, driven by the technical capabilities
+of and excitement about contemporary technologies. However, equally
 important in this story are the ideologies of control, of human and
 machine interaction, that shape engineering practice and vehicle
 development, and alter how developments are represented and discussed
@@ -65,18 +65,18 @@ of historical automotive automation research.
 
  Self-driving cars are born from the
 same history as interchangeable parts, assembly lines, machine tools,
-and scientific management, as electrification, computerization, and
+and scientific management; as electrification, computerization, and
 networked interconnection. When asked how to make something better,
 safer, faster, easier, more productive, we involve machines or at
 least what H. M. Collins describes as ``machine-like actions''\cite{???}. It is
 vital that we recognize this is not a new predilection, but is
-something that is has been with us since the Industrial Revolution.
+something that has been with us since the Industrial Revolution.
 Furthermore, technological visions and concepts inscribe excitement about the
 technologies of the present moment, and this tendency has deeply
 affected the history of automated vehicle research. From the railroad to the
 Internet (passing through the telegraph, the airship, electrification,
-television, the automobile, the rocket), each new mode of
-communication (or transportation\cite{???}) ushers in new visions of our
+television, thpe automobile, the rocket), each new mode of
+communication (or transportation\footnote{\cite{???}}) ushers in new visions of our
 collective future. We are famously bad at these predictions\cite{???} but they
 nevertheless drive the popular imaginary, which has included automated
 vehicles since the 1920s, and other types of automation for hundreds
@@ -86,23 +86,24 @@ technology have taken on aspects of the central information
 technologies of their day, and re-inscribed them as control
 technologies for physical devices.
 
-Houdina's early experiments in radio-controlled vehicles, which began
-this chapter, put us into a time period in which radio was an
-exciting, emerging technology, which was envisioned as a way to take
+Houdina's early experiments in radio-controlled vehicles (which began
+this chapter) put us into a time period in which radio was an
+exciting, emerging technology, that was envisioned as a way to take
 the driver out of the vehicle, even if a human's direct commands were
 still necessary for vehicle operations. Aachen Motors's ``Phantom
 Auto,'' operating on the same principles, toured Milwaukee a year
 later,\cite{???} and returned as an attraction in Fredericksburg in 1932\cite{???}.
 Radio control had at this point been public knowledge for at least two
 decades, since Nikola Tesla's 1898 demonstration of a radio-controlled
-boat,\cite{???} but though it was not fundamentally new the use of the
+boat,\cite{???} but though it was not fundamentally new, the use of the
 technology on public roads nevertheless shocked onlookers.
 Contemporary news articles describe the machine as if it drove itself,
 as if the physical position of the person was what mattered, not the
 fact that a human was always using the radio transmitter. ``Driverless,
 it will start its own motor, throw in its clutch, twist its steering
 wheel, toot its horn, and it may even 'sass' the policeman at the
-corner''\cite{???}. In ``one of the most amazing products of modern science'' the
+corner''\cite{???}. Described as``one of the most amazing products of
+modern science,'' the 
 car proceeds ``as though there were an invisible driver at the wheel''
 in an effect both ``uncanny and mystifying''\cite{???}. Such work,
 though it seems relatively primitive in retrospect (hardly more than a
@@ -115,11 +116,11 @@ The 1939 New York World's Fair opened to great acclaim. Covering over
 a thousand acres and attracting a total of over 44 million visitors,
 the fair was a massive public spectacle demonstrating the technical
 prowess of American industry and providing a grand vision for the
-future of the nation. The structure of the exhibition—exemplified in
+future of the nation. The structure of the exhibition---exemplified in
 its grand (and oddly-named) buildings, the Perisphere and
-Trylon—manifested the modernist techno-utopian ideology\footnote{As a
+Trylon---manifested the modernist techno-utopian ideology\footnote{As a
   side note, this has been described not only as techno-utopian but as
-an outgrown of commodity scientism, a triumph of a sort of
+an outgrowth of commodity scientism, a triumph of a sort of
 marketing-driven approach to technology that is more rhetoric than
 substance.\cite{???-DMsclass} It seems likely that commodity
 scientism, or a similar phenomenon, is deeply involved in the ways
@@ -129,18 +130,18 @@ GM's Futurama exhibit: the line for the exhibit routinely stretched to
 two miles in length, and 28,000 people visited the exhibit each day.
 The Futurama exhibit presented an idea of what the world would look
 like in 1960, one which included trains and aircraft, a farm, and an
-amusement park.\cite{???} But though GM's displays went far beyond automobiles,
-they were still the focal point: the bird's-eye view presented a
+amusement park.\cite{???} But though GM's displays went far beyond them,
+automobiles were still the focal point: the bird's-eye view presented a
 future city with multi-lane elevated expressways filled with largely
 automated vehicles. For their concept cars, GM separated the control
 functionality for steering from that for the maintenance of speed and
 distance between cars. The car's lateral position was maintained via
-curved barriers that would restore the position of the car via
+curved barriers that would restore the position of the car using
 gravity, a low-tech solution to the more complicated problem of
 steering. However, the Futurama exhibit described that distance
 between cars would be maintained via a ``sophisticated system of radio
 control''\cite{???}. Prior to electronic circuits, this would have been
-accomplished via vacuum tubes, a technology well known at the time,
+accomplished with vacuum tubes, a technology well-known at the time,
 and certainly subject to significant hurdles in terms of mechanical
 reliability. It was not until digital electronics were invented that
 hardware became the relatively stable component of driverless systems,
@@ -157,12 +158,12 @@ interest---through factory tours of major Detroit automotive plants, and
 working GM and Ford assembly lines at the earlier Century of Progress
 Exhibition in Chicago (1933-1934)\cite{???}---had spread to the city and
 countryside, where working hours were reduced through electrification,
-and even driving could become leisure, the mere supervision of a
+and even driving could become leisure, the mere inhabitation of a
 device operating via radio control.
 
 But radio was not the only revolutionary medium to be included in
  portrayals of the self-driving car of the future. The cover of the
- April 1936\cite{???} edition of the magazine Modern Mechanix betrays a
+ April 1936\cite{???} edition of the magazine \emph{Modern Mechanix} betrays a
  different vision of the autonomous vehicle: the so-called ``electric
  eye automobile'' which would steer itself via a control loop, using an
  array of ``electric eyes,'' or photocells, on the car to track a light
@@ -177,9 +178,9 @@ photo electric cell for a possible solution. A proposed driverless car
 involves the use of multiple electric eyes as the heart of its
 steering mechanism. A powerful beam of light directed at a large lens
 on the front of the car is concentrated on steel mirrors set at an
-angle in the trackbed. The reflections are “caught” by the electric
+angle in the trackbed. The reflections are ``caught'' by the electric
 eyes which convey the electrical impulses to a mechanical-electrical
-brain which keeps the speeding car on its course.\cite{???}
+brain which keeps the speeding car on its course \cite{???}.
 \end{quote}
 
 The cover pictures an intrepid ``driver'' using a camera to take a
@@ -192,7 +193,7 @@ within the magazine article---to convey him safely and speedily down
 the track. The photocells within the vehicle's sensing mechanism would
 operate relays controlling the steering linkage, closing the loop
 between sensing and acting in the manner of a ``teleological,''
-self-governing mechanism with corrective feedback.\cite{???} But how
+self-governing mechanism with corrective feedback \cite{???}. But how
 the car's governor could be modified to allow it to race with or
 beside other cars is not mentioned, which is telling since it is the
 complexities of the road environment that make automated driving so difficult.
@@ -202,9 +203,10 @@ interest in the technology continued. Ford's vice president of
 engineering and research, Andrew Kucher, was referenced in the \emph{Chicago
 Daily Tribune}, April 25, 1959, in a speech he gave at Northwestern
 University, taking seriously the idea of autonomous cars. The article,
-titled ``In 50 Years: Cars Flying Like Missiles!'' asks readers: ``can
+titled ``In 50 Years: Cars Flying Like Missiles!'' asks readers: ``Can
 you imagine flying automobiles directed by automatic guidance
-systems?''\cite{???} Matt Novak suggests that ``Arthur Radebaugh's syndicated
+systems?''\cite{???}. Author Matt Novak\footnote{Novak writes the
+ blog Paleofuture, once on the Smithsonian website, now on Gizmodo.} suggests that ``Arthur Radebaugh's syndicated
 Sunday comic 'Closer Than We Think' was also a likely inspiration''
 for contemporary images of advanced car technologies---in this case
 the vision of flying cars shown in \emph{The Jetsons} in 1962, a
@@ -221,19 +223,19 @@ visually suggest the idea that the car will keep itself within the
 demarcated space.
 
 One particularly salient public image from the 1950s comes from the
-Saturday Evening Post, which ran an advertisement for ``America's
+\emph{Saturday Evening Post}, which ran an advertisement for ``America's
 Electric Light and Power Companies'' that depicted self-driving cars
 coasting through an idyllic landscape, guided by electricity.\cite{???} The roadways
 are clean and clear, stretching off confidently into the distance. The
 landscape, tamed and controlled, yet retains its natural beauty:
 nowhere to be seen are smokestacks and the power plants generating the
-guiding force of these vehicles. Instead we see the rural, even
+guiding force of these vehicles. Instead, we see the rural, even
 pastoral, landscape largely unbesmirched, only cut across by the
 rationalization of a futuristic interstate highway system\footnote{Recall that
 the Federal Aid Highway Act of 1956 began the creation of the
-interstate system as we have it today}. Within the finned, bubble
-canopied auto sits a nuclear family, father,
-mother, daughter, and son, enjoying family time, a game of dominoes.
+interstate system as we have it today.}. Within the finned, bubble
+canopied auto sits a nuclear family---father,
+mother, daughter, and son---enjoying family time, a game of dominoes.
 Perfectly coiffed, snappily dressed, and totally at ease, the mother
 and daughter play, while the son admires a model of a futuristic
 delta-wing jet aircraft and the father looks on. Their faces glow with
@@ -244,8 +246,8 @@ dashboard and instrument cluster, facing backward. The caption reads:
 One day your car may speed along an electric super-highway, its speed
 and steering automatically controlled by electronic devices embedded
 in the road. Travel will be more enjoyable. Highways will be made
-safe—by electricity! No traffic jams . . . no collisions . . . no
-driver fatigue.\cite{???}
+safe---by electricity! No traffic jams . . . no collisions . . . no
+driver fatigue \cite{???}.
 \end{quote}
 The limitless possibilities of electricity, measured and controlled by
 America's Electric Light and Power Companies, reproduce a conservative
@@ -273,10 +275,10 @@ this optimistic vision of GM's engineering ability a reality,
 engineers lead by Joseph Bidwell and Lawrence Hafstad within GM
 Research installed ``pick-up coils'' on a 1958 Chevrolet: through a
 feedback system like that of the ``electric eye automobile,'' these
-coils would adjust the vehicle's steering.\cite{???} But unlike the
+coils would adjust the vehicle's steering \cite{???}. But unlike the
 light-guided vehicle from the 1930s, this car had a new guidance
 mechanism, which is entirely consistent with the image presented in
-the Saturday Evening Post: a wire carrying alternating current would
+the \emph{Saturday Evening Post}: a wire carrying alternating current would
 be embedded in the road and would be tracked by the pick-up coils on
 the car. A GM press release announced on February 14, 1958:
 \begin{quote}
@@ -284,12 +286,12 @@ An automatically guided automobile cruised along a one-mile check road
 at General Motors Technical Center today, steered by an electric cable
 beneath the concrete surface. It was the first demonstration of its
 kind with a full-size passenger car, indicating the possibility of a
-built-in guidance system for tomorrow’s highways.... The car rolled
+built-in guidance system for tomorrow's highways.... The car rolled
 along the two-lane check road and negotiated the banked turn-around
-loops at either end without the driver’s hands on the steering wheel.\cite{???}
+loops at either end without the driver's hands on the steering wheel \cite{???}.
 \end{quote}
 
-Instead of the mechanical ``half-pipes'' of the 1939 Futurama, advances in
+Instead of the mechanical ``half-pipes'' of the 1939 Futurama roadway, advances in
 technology would allow a future of automated steering powered
 by alternating current. Electromagnetism supplemented electricity as the
 guidance mechanism of choice. Also in the 1950s, RCA's
@@ -298,10 +300,10 @@ working on an intelligent road system of his own. His concept,
 inspired by ``railroad block signals,'' used circuits embedded in the
 road to magnetically sense vehicle speed and location, placing sensing
 and coordination capabilities outside of the vehicle, in road-side
-systems.\cite{???} Zworykin's centralized planning model would send
+systems \cite{???}. Zworykin's centralized planning model would send
 instructions to individual cars, and a 1/40th scale demonstration
 system was built for the 1960 Highway Research Board meeting in
-Washington D.C.\cite{???}
+Washington D.C \cite{???}.
 
 The 1964 New York World's Fair hosted a second Futurama exhibit, in
 which GM presented an automated highway system much like Zworykin's
@@ -311,7 +313,7 @@ thus described:
 A revolutionary 'Autoline' expands the capacity of a three-lane
 expressway: Electronically, a control-tower operator steers, brakes
 and sets the speed of each car in an automatic lane; groups of cars
-move at equal intervals as a group.\cite{???}
+move at equal intervals as a group \cite{???}.
 \end{quote}
  Advances in
 electronics, and the expansion of early control theory into
@@ -348,7 +350,8 @@ research project of the time, funded by EU member states to the tune
 of almost 750 million Euros, PROMETHEUS ran from 1987 to 1995 and
 involved the VaMP vehicle from Dickmanns's research lab along with its
 Daimler-Benz twin, VITA-II. Typical of vehicles of the time, VITA used
-a CCIR analog video-camera signal processed through a framegrabber
+a CCIR\footnote{This is a particular video standard, but its specifics are
+  not important here..} analog video-camera signal processed through a framegrabber
 which would feed the visual information into the transputer-based
 parallel-processing system\cite{???}. The VITA-II system, scaled down to fit in
 a passenger car (an S-class SEL 500), again used digitized analog
@@ -361,6 +364,18 @@ technology largely worked, with the PROMETHEUS project coming to a
 successful conclusion in 1994 and 1995 with 1000 kilometers of largely
 autonomous operation in normal traffic conditions on Paris motorways,
 as well as a finale drive from Munich to Copenhagen\cite{???}.
+
+Brief section about this project
+http://www.smithsonianmag.com/history/the-national-automated-highway-system-that-almost-was-63027245/
+note the prevalence of ``'hands-off, feet-off''' language, which
+returns in NHTSA report in \ref{chap:1}
+and specifically
+Novak claims ``perhaps the biggest problem was that the legislation
+never clearly defined what was meant by 'fully automated highway
+system.''', an important consideration for future work
+
+
+
 
 Further autonomous vehicle research has progressed incrementally from
 these vision-based beginnings. Significant interest was spurred by the
@@ -472,7 +487,7 @@ One popular vision of this technology is fundamentally optimistic: it
 puts forward the
 idea that these vehicles will be commercially available in as little
 as five years, and that in just two decades the majority of cars on the road will be
-fully autonomous. Even respected business information and consulting
+fully autonomous. Even respected business-information and consulting
 bodies have bought into this dream.\footnote{For example, the IHS
   predicts 54 million such vehicles by 2035, which is not as extreme,
   but still a sizable fraction of road vehicles \cite{IHSstudy}} In
@@ -491,6 +506,7 @@ control. That these vehicles would operate on public roadways is not
 stated explicitly---and seems optimistic given the speed of regulation
 alone---but is implied in these kinds of statements. 
 
+???-To be written
 Tesla and forthcoming ``autopilot'' mode, which explicitly involved aircraft
 discourse and refers back to the first cruise control Chrysler ``Auto Pilot''
 http://mobile.nytimes.com/2015/03/20/business/elon-musk-says-self-driving-tesla-cars-will-be-in-the-us-by-summer.html?\_r=0\&referrer=
@@ -518,7 +534,7 @@ say. Questions of safety, legality, and insurance cast doubts on this
 sort of optimistic timescale. Moral and ethical
 quandaries---driverless car ``trolley problems''---question how
 autonomous machines will respond to unusual situations and whether
-people will accept those responses. Would american freedom rhetoric
+people will accept those responses. Would American freedom-rhetoric
 allow the outlawing of human drivers \cite{???-http://www.washingtonpost.com/blogs/wonkblog/wp/2015/03/18/should-we-outlaw-human-drivers-in-a-world-of-driverless-cars/}? 
 Perhaps not. Would we accept a computerized device that kills ``3,300
 Americans'' per year, but replaces the ``roughly 33,000 lives a year
@@ -551,7 +567,7 @@ being discussed, or how else it might look.\footnote{Though it should
   on the subject than get represented in these narratives.} Both these narratives 
 tend to take a certain possible future of technology and either support it
 or illustrate its problems, without challenging that fundamental
-picture. The idea that ''if you are asked to take control, we've
+picture. The idea that ``if you are asked to take control, we've
 failed'' has become deeply ingrained in our development
 culture, more than just as a risk-mitigation strategy but as a guiding
 ideology But as we will see, this view does not necessarily hold together given
@@ -568,7 +584,7 @@ However, the nature of the self-driving car as it will appear in
 the near future is not self-evident, no matter how loud Google's voice
 or how large their investment. These technologies and visions of them
 enact certain ideologically charged activities---such as supporting
-particularly research agendas---and these can be traced through the
+particular research agendas---and these can be traced through the
 histories and current discourses of the fields involved.
 The particular epistemologies of the research fields that contribute
 to this vision greatly affect what is considered, and valued, and
@@ -588,7 +604,7 @@ different social and cultural impacts.
 
 This thesis is organized around several key questions. First, what are
 the dominant narratives around self-driving vehicles and where do they
-come from? Between the introduction, and chapter \ref{chap:1}, I
+come from? Within the introduction, and chapter \ref{chap:1}, I
 examine both the media's representation of self-driving vehicles and
 the sources of the idea, common both among the media and among
 self-driving vehicle researchers, that complete vehicle autonomy is
@@ -627,8 +643,8 @@ way. A broader appreciation for our hybrid lives, our hybrid
 engagements with machines---human beings as cyborgs---can alter public
 opinion and policy in
 productive ways. This appreciation allows us to shift the fundamental
-questions we ask about technology in a way that is, hopefully, as
-productive for others as it was for this thesis.
+questions we ask about technology in a way that is, hopefully,
+productive for research and policy-making.
 
 Fundamentally, I am a scientist at heart,\footnote{I mean this not necessarily in
   the methods of what is considered modern, experimental science,
@@ -636,7 +652,7 @@ Fundamentally, I am a scientist at heart,\footnote{I mean this not necessarily i
   but in terms of ethos, and some notion of falsifiability.} and I seek to approach my
 work in that light. What idea, or hypothesis, does this thesis attempt
 to disprove? While I say many things that have significant backing,
-though they may not themselves be provable\footnote{I hope they are,
+though they may not themselves be provable\footnote{I hope they are
   convincing, or at least suggestive.} in any real sense, my core case
 is that there is more than one story to tell about road vehicle
 automation.\footnotemark One can argue about approaches to automation and autonomy,
