--- a/chap3.tex
+++ b/chap3.tex
@@ -86,7 +86,7 @@ inhibit remote control from Earth; conditions where humans are not
 uniquely equipped to survive suggest the use of mechanical explorers
 instead; and precise control functions with redundant backup systems
 suggest the use of the unique capacities of computerized systems to
-monitor constantly and act immediately in the even of an emergency.
+monitor constantly and act immediately in the event of an emergency.
 And these are all senses with which the narrative of automation in
 spaceflight is inflected today. Certainly unmanned spaceflight had a
 strong interest in automation since at least the 1950s, with serious
@@ -104,7 +104,7 @@ technologies.
 
 \subsubsection{Manned Spaceflight}
 
-From 1952 to 1954, Colliers magazine published a series of articles
+From 1952 to 1954, \emph{Colliers} magazine published a series of articles
 titled \emph{Man Will Conquer Space Soon} which described Wernher Von
 Braun's vision for manned spaceflight.\cite{???-wiki} Numerous
 articles focused, not surprisingly, on the people who would do the
@@ -237,13 +237,13 @@ a mission to the moon to take place---set out to extend the
 capabilities of Mercury, and incorporate lessons learned from the
 precursor program. One way this occurred was specifically technical, a
 re-engineering of the space capsule to allow systems to be installed
-and serviced from the outside of the craft\cite{???}. But another
-reorchestration of space flight in the Gemini program involves the
+and serviced from the outside of the craft \cite{???}. But another
+reorchestration of space flight in the Gemini program involved the
 human's interaction with the spacecraft through control systems.
 Pilots wanted a role in launch vehicle guidance, and a number of
-simulator studies were commissioned to study the capacity of human to
-actually guide boosters into orbit\cite{???}. Pilots, spun in a
-centrifuge in Johnsville PA to simulate the immense acceleration of
+simulator studies were commissioned to identify the capacity of humans to
+actually guide boosters into orbit \cite{???}. Pilots, spun in a
+centrifuge in Johnsville, PA to simulate the immense acceleration of
 takeoff, flew
 simulated rockets: while some tests failed, with astronauts losing
 control during stage changes, some were able to launch the vehicle
@@ -268,7 +268,7 @@ systems\cite[p. 83]{???-DM}. But Mindell holds that advancing
 technology was seen to be served by the inclusion of more human
 control, which Mercury (in association with simulator tests) had proved was
 feasible\cite[p. 84]{???-DM}. The importance of orbital maneuvers,
-rendezvous and docking, for the Gemini missions suggested returning
+ such as rendezvous and docking, for the Gemini missions suggested returning
 the role of piloting to the spacecraft pilot, and rendezvous was
 indeed performed with manual control\cite[p. 84]{???-DM}. But, as
 pilots (particularly, Jim McDivitt) soon discovered, orbital
@@ -281,7 +281,7 @@ up'' to a target may require going slower to change orbits\cite[p.
   86]{???-DM} ``Numbers, equations, and calculations'' would be
 required, and were bootstrapped to the pilot's senses with a new
 readout, the IVI or Incremental Velocity Indicator, which could be
-programmed with particular velocity changed in different axes and
+programmed with particular velocity changes in different axes and
 would show visually when those particular burns had been achieved,
 so that the human pilot would know when to stop accelerating\cite[p.
   86-87]{???-DM} Pilots did not fight the implementation of such
@@ -320,7 +320,7 @@ could operate in a self-contained fashion for some length of
 time, albeit with greater positional errors than when a ground
 reference is used\cite[p. 191]{???-BennettCheatham}. The LM's approach
 to the surface also involved a complex dance of manual and automated
-capabilities,with shifting roles for different phases of the
+capabilities, with shifting roles for different phases of the
 landing.\footnote{While the details of this are largely superfluous
   here, see \cite{???-BennettCheatham} for more information.} While the initial
 idea for lunar landing was that the 
@@ -336,8 +336,8 @@ paper on the Lunar Module landing system: ``The essence of the
 approach phase guidance system is that the LM commander can manually
 steer the LM to the selected landing site, yet the trajectory he flies
 is produced by an automatic guidance system'' \cite[p.
-  129]{???-Klumpp}. Klumpp's self-described ``hybrid'' system account 
-for the ``obvious desire of many man to control his craft'' and
+  129]{???-Klumpp}. Klumpp's self-described ``hybrid'' system accounts 
+for the ``obvious desire of any man to control his craft'' and
 provides both flexibility and safety\cite[p. 129-130]{???-Klumpp}
 While the Apollo engineers perhaps
 got away with a lot of automation, in part because the astronauts were
@@ -375,12 +375,12 @@ grounds\cite{???}.\footnote{While Killian's list of goals for the
     194-197]{smithSelling}.} Instead of a manned program, scientists
 have continued to push for unmanned probes,\footnote{And these probes
   actually get leveraged in the popular narrative as sources for
-  automated vehicle design inspiration: `` And so Google’s new vehicle
+  automated vehicle design inspiration: `` And so Google's new vehicle
   design 
-takes a leaf out of NASA’s design book to cope with such
-eventualities. 'It doesn’t have a fallback to human—it has redundant
+takes a leaf out of NASA's design book to cope with such
+eventualities. `It doesn't have a fallback to human---it has redundant
 systems,' said Fairfield. 'It has two steering motors, and we have
-various ways we can bring it to a stop'''\cite{simonite}. This is a
+various ways we can bring it to a stop''' \cite{simonite}. This is a
 very reductive view even of the most remote of NASA's unmanned space
 systems, let alone manned systems with which the Google vehicles must share
 the critical characteristic of containing human occupants.} but even for
@@ -421,7 +421,7 @@ represents greater engagement between scientists and the remote
 machine than during the earlier \emph{Viking} mission, in which weeks
 were spent writing programs to run the robot.\cite[p. 58]{???-clancey}
 The recent missions step back
-from programmatic operation, and toward closely-coupled human
+from programmatic operation, and toward closely coupled human
 supervised control. The Mars rovers could
 certainly have been made more autonomous, but this would have opposed
 their function. The quality of the mission depends on ``aspects of the
@@ -441,7 +441,7 @@ way\cite[p. 106, 110, 118]{???-clancey}. The system's autonomy does not replace 
 scientists, but allows them to do more of what they want to do and are
 best at, and less of what they don't: some types of automation could reduce the
 autonomy of the scientists, and their ability to act creatively and
-spontaneous to capitalize on new findings\cite[p.
+spontaneously to capitalize on new findings\cite[p.
   118-119]{???-clancey}. 
 
 \subsubsection{Unmanned Exploration and the Researcher}
@@ -570,7 +570,7 @@ Wright Flyer, as do the competing professional identities that
 accompany them: are you simply a chauffeur, or a ``true
 airman''\cite[p. 21]{???-DM}? The Wright's focus on the operator's
 skill\footnote{The navigation of human and automated capabilities in
-  high-performance racing deserves proper investigation. But I suspect
+  high-performance racing also deserves proper investigation. But I suspect
 similar issues play out in this arena: modern racing cars depend on
 much accumulated engineering expertise, but racing is as much about
 the drivers as the cars and so inventiveness is often tempered by
@@ -588,7 +588,7 @@ control, and some saw these devices as ``band-aids'' for engineers not
 ``skilled'' enough to make the aircraft stable\cite[p. 35]{???-DM}. J.
 O. Roberts' ``The Case Against Automation in Manned Fighter Aircraft''
 argued for more emphasis on displaying information to pilots, rather
-than using automation to assuming control\cite[p. 35]{???-DM}.
+than using automation to assume control\cite[p. 35]{???-DM}.
 Nevertheless, cockpit automation has continued to increase. Today,
 many airlines 
 have guidelines that require automation systems to be used
@@ -597,7 +597,8 @@ in the automotive space: deep controversies exist among automotive
 enthusiasts about the proper roles of all-wheel-drive, traction
 control, and automatic transmissions in the driving process. Even ABS,
 generally accepted today as a positive technology that enhances safety and
-performance, is in some senses controversial, driven by the idea that
+performance, is in some senses controversial; this skepticism is
+motivated by the idea that 
 a professional driver utilizing fully manual ``threshold braking,''
 developed through deep experience and human skill, can outperform the
 computerized system\cite{???}. New performance vehicles---like the
@@ -615,7 +616,7 @@ interaction with the technology.}
 turning an average driver into a hero or track-star\cite{???}.
 
 Computerized aids are sites of contradictory feelings and pressures.
-Cruise control, when first introduced commercially as Chrysler's ``Auto-Pilot''
+Cruise control, when first introduced commercially as Chrysler's ``Auto-Pilot,''
 was described as ``faintly
 ominious'' by \emph{Popular Science}, but nevertheless seemed like a
 ``genuine help'' for reducing
@@ -684,7 +685,7 @@ least intermittently, by a person who can theoretically correct errors
 made by the automation.\footnote{Of course there are serious
   limits to this capability, as HSC research shows, and as I will
   more fully describe later in this chapter.} This point is made not
-only numerous articles describing vehicle operations in general terms,
+only by numerous articles describing vehicle operations in general terms,
 but by Google's
 own job postings, searching for ``vehicle safety specialists'' to join
 the self-driving car team in Mountain View. The ideal operator will
@@ -743,7 +744,7 @@ This operational mode, then, is more properly a human-supervisory mode
 than an autonomous one. The study of HSC is by no means new, but
 perhaps because it does not interact with human fears of obsolescense,
 loss of agency, or robot apocalypse the way AI does---it doesn't stand
-to damage our egos in the same way, in part because because it just
+to damage our egos in the same way, in part because it just
 sounds rather staid and boring---it has not been as commonly
 recognized or discussed in popular narratives. And yet, supervisory
 control is implied any time an article mentions a human driver or
@@ -773,7 +774,8 @@ automation.\footnote{And in fact, Sheridan is almost prescient in his
 shares touch-points with the history of automation in its popular
 form, but comes more out of theories of management and human factors
 engineering. Frederick Winslow Taylor is identified as a key player in
-the history, less for his ``dehumanizing'' approach to the worker as
+the history, less for his ``dehumanizing'' approach to the worker than
+as
 his intent to generate ``a new interest in the sensorimotor aspects of
 human performance''---in other words, the way that human capabilities
 interact with the tools they use to accomplish the tasks they are
@@ -812,16 +814,16 @@ strictest sense is that
   programming and continually receiving information from a computer
   that itself closes an autonomous control loop through artificial
   effectors and sensors to the controlled process or task
-  environment\cite[p. 1]{sheridan}\end{quote}
+  environment \cite[p. 1]{sheridan}.\end{quote}
 The less-strict definition loosens the requirement that the device
 close a control loop of its own, simply requiring it to interconnect
 ``through artificial effectors and sensors to the controlled process
 or task environment'':  only in the strict case can the computer
-operator without the human as an autonomous system ``for some
+operate without the human as an autonomous system ``for some
 variables at least some of the time.''\cite[p. 1]{sheridan} This
 emphasis on partial, gradiated control\footnote{The computer system
   may function primarily on the ``efferent or motor side'' to actually
-implement directives from the supervisory, subject to its own
+implement directives from the supervisor, subject to its own
 sensors.\cite[p. 3]{sheridan} Or it may act principally ``on the
 display side,'' processing incoming sensory information into a form
 digestible for the supervisor, or, as is usual, it may do some
@@ -837,15 +839,15 @@ the AI-focused perspective on automated systems.\footnote{Why is this
   excitement and investment, autonomy simply sounds more interesting
   than ``supervision,'' while companies can walk-back their actual
   products toward more comfortable, HSC applications. Additionally, I
-  would speculate that the relatively low marginal position of human
-  factors in engineering is related.} This is neither a
+  would speculate that the relatively low, marginal position of human
+  factors in engineering cultures is related.} This is neither a
 weakness nor an unwillingness to be sufficiently bold, but a
 well-considered engineering strategy. Sheridan identifes seven
 motivations to develop supervisory control, of which
 six\footnote{Number 5 is not relevant as stated, but is very relevant
   in principle to a distracted driver.} are
-eminently relevant to self-driving cars and so I will include those
-here in their entireity:
+eminently relevant to self-driving cars, and so I will include those
+here in their entirety:
 \begin{quote} (1) to achieve the accuracy and reliability of the
   machine without sacrificing the cognitive capability and
   adaptability of the human,
@@ -859,7 +861,7 @@ here in their entireity:
 (5) to make control possible even where there are time delays in
   communication between human and teleoperator,
 (6) to provide a ``fail-soft'' capability when failure in the
-  operator's direct control would prove catastrophic\cite[p. 12]{sheridan}
+  operator's direct control would prove catastrophic \cite[p. 12]{sheridan}.
 \end{quote}
 
 Though supervisory control, and human factors engineering by proxy, is
@@ -881,7 +883,7 @@ understanding the operations of ``self-driving'' vehicles. To provide
 a specific example of supervisory control, consider the following
 situation: a highly-automated vehicle is set up to operate in a
 supervised manner. The vehicle is capable of navigating traffic on its
-own, but includes a map interface, a digital display a shifter that includes an
+own, but includes a map interface, a digital display, a shifter that includes an
 autonomous mode ``gear'' selection, a standard set of wheel and
 pedals, a turn signal control,
 and a cruise-control-like control stalk. The user may set a
@@ -922,7 +924,7 @@ in or which turns to make without having to maneuver manually (3); it
 allows the operator to pay intermittent attention to the vehicle by
 including fail-safe modes and the ability to handle most driving
 situations (4, 5); in the case of a time delay in response (e.g. due
-to drowsyness) or an
+to drowsiness) or an
 operator's failure to control, the vehicle will attempt to behave
 safely (5 and 6). While actually designing and engineering such a
 system is by no means as simple as sketching it briefly as I have, it
@@ -950,7 +952,7 @@ Science\footnote{And, notably, responding to the canonical focus of
   cognitive science on the ``mental processes that organize the
   behavior'' of an individual, a position Hutchins cites as having its
 standard statement in Newell and Simon's 1972 \emph{Human problem
-  solving}.\cite[p. 265-266]{hutchinsCockpit} These AI pioneers show
+  solving} \cite[p. 265-266]{hutchinsCockpit}. These two early AI pioneers show
 up again here, and their individualist focus perhaps sheds some 
 light on why the narratives of automated vehicle technology that are
 inflected by AI are so different than they would be if told instead
@@ -969,8 +971,11 @@ and uses the example of an airline cockpit to show how the cognitive
 properties of a system as a whole may be very different than those of
 individual human actors within that system.\footnote{This is also true
 for systems that do not actually contain ``automation'' technologies
-as part of their make-up. The speed-bugs discussed in ``How a Cockpit
-Remembers Its Speeds'' are rudimentary in terms of other forms of
+as part of their make-up. The speed bugs discussed in ``How a Cockpit
+Remembers Its Speeds''---which note on the airspeed indicator
+important speeds at which the 
+flight characteristics of the aircraft need to be altered to maintain
+safe operations---are rudimentary in terms of other forms of
 cockpit automation, but the issues they present do not disappear with
 increased automation. Hutchins and Klausen co-wrote another
 article in 1995 titled ``Distributed Cognition in an Airline
@@ -994,10 +999,11 @@ information, giving it a new representation and altering the
 interaction with that information: specifically, changing a task that
 requires memory and comparison to a readout to a simpler task of
 ``judgments of spatial proximity'' of the needle to the speed
-bugs.\cite[p. 282]{hutchinsCockpit}. The whole system can be said to
+bugs \cite[p. 282]{hutchinsCockpit}. The whole system can be said to
 have a ``memory'' that is distinct from the pilot's memory: the
 ``\emph{cockpit system} remembers speeds'' by virtue of the pilots
-within that system judging a needle against the bug.\cite[p.
+within that system judging a needle on the airspeed indicator against
+the position of the bug.\cite[p.
   283]{hutchinsCockpit} I introduce this material here because
 Hutchins, by looking at cognitive behaviors within this particular
 setting, identifies a new unit of analysis: the cockpit as a whole.
@@ -1025,7 +1031,7 @@ controls, rather than addressing what control involves or how it may
 be shared between human and automated systems.
 
 A more nuanced view of the cognitive tasks involved in interacting
-with automated systems also goes quite a ways toward clarifying some
+with automated systems also goes quite far toward clarifying some
 of the more difficult parts of system automation. Specifically,
 significant research interest in human factors engineering focuses on
 the problem of so-called ironies of automation, whereby increasing automation actually
@@ -1042,7 +1048,7 @@ panel with many displays and lights, and switches to press) while the
 overall processes within and results of the system remain
 fundamentally congruent---the system still ``knows'' how to turn, for
 example, but instead of the driver turning the wheel, she interacts
-with the automation systems in cognitively-intense way. Attending to
+with the automation systems in cognitively intense ways. Attending to
 the complex internal dynamics of
 the joint system improves the analysis: looking at which tasks are
 allocated where, and what is the demand on human perceptual and
@@ -1092,10 +1098,10 @@ consideration of the interface, without consideration of deeper
 dynamics of human and joint cognitive processes. It may be
 that this kind of engineering work gains greater recognition with the
 entry of Google, Apple, Tesla, and other high-technology companies
-into the autonomous vehicle space, but so far Google's seems to dream
+into the autonomous vehicle space, but so far Google seems to dream
 of minimizing the interface as much as possible, rather than more
 broadly considering what sort of interface makes sense.\cite{???}
-While the interface/UX-first approach of tech companies seems like it
+While the interface/UX-first approach of tech companies seems as if it
 would put interaction at the center, the focus on simplicity
 presupposes a certain kind of highly automated operation.
 %%Wrap up: Actual use all over industry (Sheridan 10-11), and implicit
@@ -1118,19 +1124,20 @@ the same for cars, which are generally not orchestrated at a
 system-level in the same fashion. But in principle, the roadway presents a related
 information processing situation. The propagation of a ``plan'' of the
 vehicle's path on the 
-road into the state of the vehicle's controls keeps vehicles apart.
+road into the state of the vehicle's controls keeps vehicles
+physically apart.
 And even when that vehicle system involves computerized
 displays, sensors, and people, the same point holds;  at a high-level of oversight, as
 one would find represented in an employee monitoring an automated
 vehicle fleet remotely 
 from an office, the parallelism with aircraft operations returns in
 full force. There is certainly a difference in the
-professionalization of pilots compared with the ordinary status of an
+professionalization of pilots compared with the ``ordinary'' status of an
 everyday driver, and this difference in status and roles certainly
 changes the amount of training we expect operators to have and the
 sorts of interactions that may appeal to them, but there is no
 fundamental reason why human-supervisory control approaches and
-experience are not applicable to automated vehicles, if appropriately
+experience are not applicable to automated cars, if appropriately
 moderated for the role and status of the driver. 
 
 \subsection{Whither Alternate Narratives?}
@@ -1154,17 +1161,18 @@ come to be more socially acceptable in certain ways---notably, in
 terms of autonomy and ethics. Furthermore, as I have stated
 repeatedly, complete autonomy is fundamentally a chimera.
 
+%%TODO add this paragraph
 http://recode.net/2015/03/17/google-self-driving-car-chief-wants-tech-on-the-market-within-five-years/
 ``Urmson said Google believes that while technology that assists drivers
 can help reduce some accidents, only completely self-driving cars will
 fully address safety concerns. One reason, he said, is that the better
 the assistive technology gets, the more risks human drivers will
 take.''
-``Nor, he said, will today’s driver-assist technologies just evolve to
+``Nor, he said, will today's driver-assist technologies just evolve to
 become fully self-driving cars on their own.
 
-“That’s like me saying if I work really hard at jumping, one day I
-will be able to fly,” he said.''
+`That’s like me saying if I work really hard at jumping, one day I
+will be able to fly,' he said.''
 --> he is right that driver assistance tech won't just become
 driverless, but wrongly assumes driverless is the only reasonable end goal.
 
@@ -1181,7 +1189,7 @@ Autonomy in DoD Systems}, describe the proliferation of attempts at
 automation taxonomies as developing out of Sheridan's work, the very
 book cited above as the bible for human supervisory control.\cite{???}
 However, the DSB takes a far more nuanced position than many do,
-perhaps do to many years worth of accumulated experience within the
+perhaps due to many years worth of accumulated experience within the
 military in terms of how to understand and apply autonomy in practical
 systems. The DSB
 identifies that these levels formulations are ``often incorrectly
@@ -1204,7 +1212,7 @@ vehicle to a stop as quickly as I have requested. These currently
 everyday situations already defy levels, and represent overlapping, shifting
 delegations of authority that may change on a second-by-second basis.
 I also claim, to add to their critique, that the
-levels seem to also suggest scaffolds of increasing desirability,
+levels seem to suggest scaffolds of increasing \emph{desirability},
 which, as we have seen in air and space flight, is a matter of perspective.
 
 In addition, the DSB highlights two main negative consequences of the popularity of
@@ -1216,7 +1224,7 @@ involved somewhere along the line, in their programming, production,
 and use, though it makes sense that the military, focused as it is on
 human command hierarchies, would find it especially important to make
 this apparent. Even so-called ``full autonomy'' is not likely to be so
-simply full. At the very least, a human-rated system will need to have
+simply \emph{full}. At the very least, a human-rated system will need to have
 a stop or abort button. And having such an option implies some human
 oversight, which means a number of additional questions soon arise:
 How much monitoring? When does it happen? And how is it
@@ -1246,7 +1254,8 @@ the human-machine dynamic in automation technology. Not focusing on
 the role of human attention risks that these decisions get made
 by fiat, on the basis of other factors.} And the parameters of
 these interactions are in part defined by the end goal. Much popular
-discussion centers around texting as a need for automated cars. But as
+discussion centers around texting as a key motivator of the need for
+automated cars. But as 
 David Mindell describes,``wanting to text is different
 from needing a fully automated vehicle,''\footnote{David Mindell,
   discussion with the author, September 8, 2014} and it seems quite possible
@@ -1271,7 +1280,7 @@ or saints?'' which seems so popular in media discussions: it represents
 a ``false position'' that does not adequately reflect the complex
 nature of operating automated
 systems\cite[p. ??]{???-woodshollnagel-JCS-ch1}. As operators, we are
-sources of both success and failure. But ultimate, as Woods and
+sources of both success and failure. But ultimately, as Woods and
 Hollnagel point out, all cognitive systems are finite and will
 therefore also have errors, lapses, and
 failures\cite[p. ??]{???-woodshollnagel}. Success in automation is not
@@ -1309,7 +1318,7 @@ anomalous or a failure, and focusing on ``autonomy'' or ``self-driving,''
 obscures real complexities of operation that encounters with the world
 will inevitably involve. The important question is when/how are people
 involved, and this should be empirically not ideologically
-driven.\footnote{Of course beliefs and ideologies are always involved
+driven.\footnote{Of course, beliefs and ideologies are always involved
   in decision making, but we should at least air them for all to see,
   and weight them carefully, rather than blindly following a dominant
   idea of the uses of technology.}
@@ -1359,7 +1368,7 @@ vehicles involving computer code will always depend to an extent on
 that code, and the previous discussion about programmatic ethics still
 holds. But what changes here is that the vehicle is no longer free to
 operate based only on its programmed ethics for long periods of time.
-Instead, the human operator is involved in decision making processes
+Instead, the human operator is involved in decision-making processes
 at a much more granular level. Will some emergency situations likely
 be handled in a largely automated fashion, just as today's pedestrian
 detection systems can perform an emergency stop to avoid pedestrians a
@@ -1416,7 +1425,7 @@ operators of vehicles between this situation and historical models,
 since airliners are piloted by professionals
 and cars are generally considered to be driven by non-professionals.
 Nevertheless, people are licensed to drive, and there is no reason to
-say that new types of training training may not be necessary or good;
+say that new types of training may not be necessary or good;
 or even that some continuing education would not be a positive
 influence on traffic safety, on balance, even with present
 technologies. But with further human involvement in driving, there is
@@ -1426,6 +1435,8 @@ amounts of automated safety technologies,
 may be vulnerable to the same critiques as the Nissan GT-R. But these
 vehicles could still provide a role for the human and a place for
 enthusiasts who want to be involved in vehicle operations.
+
+\subsection{Conclusion}
 
 In the end, whether you are an operator in a vehicle trying to monitor that you
 are on the right path, and not about to be killed by an undetected
